Developer/src/objects/SFDC_Job__c.object
<CustomObject>
    <description>募集職種</description>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>採用責任者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N10000000EAGzEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Comments__c</fullName>
        <label>コメント</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>詳細</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Filled__c</fullName>
        <label>採用者決定</label>
        <picklist>
            <picklistValues>
                <fullName>いいえ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Hire_Date__c</fullName>
        <label>採用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>募集職種名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <displayFormat>JOB{00000}</displayFormat>
        <label>募集職種番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Requirements__c</fullName>
        <label>募集要項</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>01-公開中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02-募集中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-選考中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-最終調整中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-終了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-保留</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>種別</label>
        <picklist>
            <picklistValues>
                <fullName>新規</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>交替</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Officially_Open_Date__c</fullName>
        <label>公開日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部署</label>
        <referenceTo>SFDC_Department__c</referenceTo>
        <relationshipName>R00N10000000EAHCEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Hire_Date__c</fullName>
        <label>採用予定日</label>
        <type>Date</type>
    </fields>
    <label>募集職種</label>
    <listViews>
        <fullName>View</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>募集職種名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>